<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:title="@string/home" />
    <item
        android:id="@+id/categories"
        android:icon="@drawable/ic_category"
        android:orderInCategory="2"
        android:title="@string/categories" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart"
        android:orderInCategory="3"
        android:title="@string/cart" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="4"
        android:title="@string/favorites" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account"
        android:orderInCategory="5"
        android:title="@string/account" />
</menu>